--- a/index.html
+++ b/index.html
@@ -22,25 +22,30 @@
       
 
     <title>
-      Home | Matie Natov | UX Designer and Website Developer
+      Home | Matie Natov | Digital Designer and Developer
     </title>
   </head>
   <body>
 
     <style>
 
-    body {
-      background: url(https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/Matie_Natov_Web_Designer.jpg) no-repeat center center fixed;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-      min-height: 350px;
-      color:#FFF;
-      background-color:#444444;
-	font-family: 'Montserrat', sans-serif;
-		font-weight: 700;
-    }
+	body {
+		background: url(https://raw.githubusercontent.com/matienatov/matienatov.github.io/master/images/Matie_Natov_Web_Designer.jpg) no-repeat center center fixed;
+		-webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
+		min-height: 350px;
+		color:#FFF;
+		background-color:#444444;
+		font-family: 'Montserrat', sans-serif;
+	}
+		
+	.display-4 {
+		font-weight: bold;
+	}
+		
+		
     </style>
 
 
@@ -54,9 +59,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md">
-        <h1 class="display-4">My name is Matie. I&nbsp;am&nbsp;a UX Designer and Website Developer.</h1>
-          <a class="btn btn-primary" href="work.html#list-item-1">
-            View My Work
+        <h1 class="display-4">
+			My name is Matie. I&nbsp;am&nbsp;a Digital Designer and Developer
+		  </h1>
+          <a class="btn btn-primary" href="Web_Design.html">
+            View My Web Design Work
           </a>
       </div><!-- end col -->  
       <div class="col-md"></div><!-- end col -->  
