--- a/Web_Design.html
+++ b/Web_Design.html
@@ -51,9 +51,9 @@
 	  </button>
 	  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 		<div class="navbar-nav">
-		  <a class="nav-item nav-link active" href="web_design.html">Web Design <span class="sr-only">(current)</span></a>
-		  <a class="nav-item nav-link" href="graphic_design.html">Graphic Design</a>
-			<a class="nav-item nav-link" href="logo_design.html">Logo Design</a>
+		  <a class="nav-item nav-link active" href="Web_Design.html">Web Design <span class="sr-only">(current)</span></a>
+		  <a class="nav-item nav-link" href="Graphic_Design.html">Graphic Design</a>
+			<a class="nav-item nav-link" href="Logo_Design.html">Logo Design</a>
 		</div>
 	  </div>
 	</div><!-- end -->
