--- a/Logo_Design.html
+++ b/Logo_Design.html
@@ -85,7 +85,7 @@
 				Logo Design
 			</h3>
 			<p>
-				In 2020, I planned, sketched, designed and published a logo
+				In 2020, I planned, sketched, and designed a logo for Sephora's education technology. The logo features a mobile icon, a rounded square with the platform's acronym type-set within a rounded square and a subtle drop shadow. Next to the icon, is typography of the platform's name. The letter spacing and kerning was set to make the typography really easy to read on an interface design.
 			</p>
 			
 			<!-- Button -->
@@ -136,7 +136,7 @@
 				Logo Design for Tech Company
 			</h3>
 			<p>
-				In 2016, I worked with a tech company to design their website logo. The image shows a beautiful typography display of a sans serif font. The letter spacing and kerning are set perfectly, to make the type easy to read. The colors break up the two words. The logo is easy to read and legible from near and far.
+				In 2016, I worked with a tech company to design their website logo. The image shows a beautiful typography display of a sans-serif font. The letter spacing and kerning are set perfectly, to make the type easy to read. The Q letter has special treatment to make it look interesting. The colors break up the two words. The logo is easy to read and legible from near and far.
 			</p>
 			
 			<!-- Button -->
