--- a/Logo_Design.html
+++ b/Logo_Design.html
@@ -85,7 +85,7 @@
 				Logo Design
 			</h3>
 			<p>
-				In 2020, I planned, sketched, and designed a logo for Sephora's education technology. The logo features a mobile icon, a rounded square with the platform's acronym type-set within a rounded square and a subtle drop shadow. Next to the icon, is typography of the platform's name. The letter spacing and kerning was set to make the typography really easy to read on an interface design.
+				In 2020, I planned, sketched, and designed a logo for Sephora's education technology. The logo features a mobile icon of the platform's acronym type-set within a rounded square and a subtle drop shadow. Next to the icon, is typography of the platform's name. The letter spacing and kerning was set to make the typography really easy to read on an interface design.
 			</p>
 			
 			<!-- Button -->
