--- a/Graphic_Design.html
+++ b/Graphic_Design.html
@@ -265,9 +265,107 @@
 	  
 <br>
 <br>
-	<hr>	  
+
+<footer>
+  <div class="container">
+	  
 <br>
 <br>
+	  
+	  
+  <div class="row">  
+  <div class="col-md-3 sol-sm-12">
+	  <h6>View My Work</h6>
+	  <ul>
+		<li>
+			<a href="Web_Design.html">
+				Web Design
+			</a>
+		</li>
+		  <li>
+			<a href="Graphic_Design.html">
+				Graphic Design
+			</a>
+		</li>
+		  <li>
+			<a href="Logo_Design.html">
+				Logo Design
+			</a>
+		</li>
+	  </ul>
+  </div><!-- end col-md-3 sol-sm-12 -->
+	  
+  <div class="col-md-3 sol-sm-12">
+	  <h6>On The Web</h6>
+	  <ul>
+		<li>
+			<a href="https://matienatov.wordpress.com/">
+				Blog
+			</a>
+		</li>
+		  <li>
+			<a href="https://codepen.io/matie">
+				Codepen
+			</a>
+		</li>
+		  <li>
+			<a href="http://dribbble.com/matiedesign">
+				Dribbble
+			</a>
+		</li>
+		  <li>
+			<a href="https://twitter.com/NatovMatie">
+				Twitter
+			</a>
+		</li>
+		  <li>
+			<a href="https://www.linkedin.com/in/matie-natov-b5697b183/">
+				LinkedIn
+			</a>
+		</li>
+	  </ul>
+  </div><!-- end col-md-3 sol-sm-12 -->
+	  
+	<div class="col-md-3 sol-sm-12">
+	  <h6>Contact Me</h6>
+	  <ul>
+		<li>
+			<a href="tel:4153195920">
+				(415) 319-5920
+			</a>
+		</li>
+		  <li>
+			<a href="mailto:matiedesign@gmail.com">
+				matiedesign@gmail.com
+			</a>
+		</li>
+	  </ul>
+  </div><!-- end col-md-3 sol-sm-12 -->
+	  
+	<div class="col-md-3 sol-sm-12">
+	  <h6>About Me</h6>
+		<p class="text-left">
+			I am a user-centric website producer, specializing in web design, web development, visual design, user experience, and user testing. I love working with a team and collaborating to produce projects from start to finish.
+		</p>
+  </div><!-- end col-md-3 sol-sm-12 -->
+	  
+	  
+  </div><!-- end row -->
+  </div><!-- end container -->
+	
+	
+	<br>
+	<br>
+	
+<div class="container">
+<div class="row">  
+	
+	<p class="text-center">
+		&copy; 2020 Matie Natov. All rights reserved.
+		</p>
+</div><!-- end row -->
+</div><!-- end container -->
+</footer>
 	  
 	  
 	  
